--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,23 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".AddCardActivity"
             android:label="@string/add_card_name"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@style/AppTheme.Preference"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.Preference" />
 
         <provider
             android:name=".data.CardProvider"
@@ -39,7 +39,6 @@
         <service
             android:name=".service.CardService"
             android:exported="false" />
-
         <service
             android:name=".service.NotificationJobService"
             android:exported="true"
@@ -55,6 +54,7 @@
                 android:resource="@xml/card_widget" />
         </receiver>
 
+        <activity android:name=".CardDetailsActivity"></activity>
     </application>
 
 </manifest>
