--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:preference-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     compile 'com.android.support:cardview-v7:27.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
