--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,14 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.0'
     implementation 'com.android.support:design:27.1.0'
     implementation 'com.android.support:preference-v7:27.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    androidTestCompile 'com.android.support:support-annotations:27.1.0'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestCompile 'com.android.support.test:rules:1.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
